<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="extra_keys_styling_category"
        app:title="@string/termux_extra_keys_styling_header">

        <ListPreference
            app:key="extra_keys_color_theme"
            app:title="@string/termux_extra_keys_color_theme_title"
            app:summary="@string/termux_extra_keys_color_theme_summary"
            app:entries="@array/extra_keys_color_theme_titles"
            app:entryValues="@array/extra_keys_color_theme_values"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="default" />

        <SwitchPreferenceCompat
            app:key="extra_keys_flat_keys"
            app:title="@string/termux_extra_keys_flat_keys_title"
            app:summary="@string/termux_extra_keys_flat_keys_summary"
            app:defaultValue="true" />

        <SeekBarPreference
            app:key="extra_keys_margin"
            app:title="@string/termux_extra_keys_margin_title"
            app:min="0"
            android:max="8"
            app:showSeekBarValue="true"
            app:defaultValue="2" />

        <SeekBarPreference
            app:key="extra_keys_text_size"
            app:title="@string/termux_extra_keys_text_size_title"
            app:min="9"
            android:max="16"
            app:showSeekBarValue="true"
            app:defaultValue="12" />

        <SeekBarPreference
            app:key="extra_keys_height_scale"
            app:title="@string/termux_extra_keys_height_scale_title"
            app:min="80"
            android:max="160"
            app:showSeekBarValue="true"
            app:defaultValue="115" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="extra_keys_bar_border_category"
        app:title="@string/termux_extra_keys_bar_border_header">

        <SwitchPreferenceCompat
            app:key="extra_keys_bar_border_enabled"
            app:title="@string/termux_extra_keys_bar_border_enable_title"
            app:summary="@string/termux_extra_keys_bar_border_enable_summary"
            app:defaultValue="false" />

        <SeekBarPreference
            app:key="extra_keys_bar_border_width"
            app:title="@string/termux_extra_keys_bar_border_width_title"
            app:min="1"
            android:max="4"
            app:showSeekBarValue="true"
            app:defaultValue="1" />

        <Preference
            app:key="extra_keys_bar_border_color"
            app:title="@string/termux_extra_keys_bar_border_color_title"
            app:summary="@string/termux_extra_keys_bar_border_color_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="extra_keys_customizer_category"
        app:title="@string/termux_extra_keys_customizer_header">

        <SwitchPreferenceCompat
            app:key="extra_keys_use_custom"
            app:title="@string/termux_extra_keys_use_custom_title"
            app:summary="@string/termux_extra_keys_use_custom_summary"
            app:defaultValue="false" />

        <ListPreference
            app:key="extra_keys_preset"
            app:title="@string/termux_extra_keys_preset_title"
            app:summary="@string/termux_extra_keys_preset_summary"
            app:entries="@array/extra_keys_preset_titles"
            app:entryValues="@array/extra_keys_preset_values"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="extra_keys_custom_json"
            app:title="@string/termux_extra_keys_custom_json_title"
            app:summary="@string/termux_extra_keys_custom_json_summary"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="keyboard"
        app:title="@string/termux_keyboard_header">

        <SwitchPreferenceCompat
            app:key="soft_keyboard_enabled"
            app:summaryOff="@string/termux_soft_keyboard_enabled_off"
            app:summaryOn="@string/termux_soft_keyboard_enabled_on"
            app:title="@string/termux_soft_keyboard_enabled_title" />

        <SwitchPreferenceCompat
            app:key="soft_keyboard_enabled_only_if_no_hardware"
            app:summaryOff="@string/termux_soft_keyboard_enabled_only_if_no_hardware_off"
            app:summaryOn="@string/termux_soft_keyboard_enabled_only_if_no_hardware_on"
            app:title="@string/termux_soft_keyboard_enabled_only_if_no_hardware_title" />

    </PreferenceCategory>

</PreferenceScreen>
